[gd_scene load_steps=35 format=2]

[ext_resource path="res://Decorator/RANASALTARINA.jpg" type="Texture" id=1]
[ext_resource path="res://Main/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.247059, 0.203922, 0.203922, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.027451, 0.00392157, 0.00392157, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFontData" id=10]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=11]
size = 33
font_data = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.247059, 0.203922, 0.203922, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFontData" id=6]
font_path = "res://font/Coffee Spark.ttf"

[sub_resource type="DynamicFont" id=7]
size = 67
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://font/Coffee Spark.otf"

[sub_resource type="DynamicFont" id=9]
size = 61
outline_size = 4
outline_color = Color( 0.0705882, 0.0117647, 0.0117647, 1 )
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=24]
size = 21
font_data = SubResource( 19 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0.67451 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFontData" id=23]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=27]
size = 21
font_data = SubResource( 23 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0.639216 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=30]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=31]
size = 21
font_data = SubResource( 30 )

[sub_resource type="DynamicFontData" id=32]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=33]
size = 21
font_data = SubResource( 32 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.6, 0.6, 0.6, 0.639216 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=36]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=37]
size = 14
font_data = SubResource( 36 )

[sub_resource type="DynamicFontData" id=38]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=39]
size = 21
font_data = SubResource( 38 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.6, 0.6, 0.6, 0.639216 )

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 1, 1, 1, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.168627, 0.156863, 0.156863, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 38.0
texture = ExtResource( 1 )
expand = true

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = -59.5
margin_right = 210.5
margin_bottom = 59.5
custom_constants/separation = 12

[node name="Play" type="Button" parent="Menu"]
margin_right = 421.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "PLAY"

[node name="Setting" type="Button" parent="Menu"]
margin_top = 47.0
margin_right = 421.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "SETTING"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 94.0
margin_right = 421.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "EXIT"

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_right = 490.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 7 )
text = "ADVENTUROUS"

[node name="Label2" type="Label" parent="."]
margin_left = 330.0
margin_top = 62.0
margin_right = 504.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 9 )
text = "FROG"

[node name="Setting" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.544
margin_top = -25.0
margin_right = 64.544
margin_bottom = 25.0
rect_scale = Vector2( 1.08, 1 )

[node name="Video" type="Button" parent="Setting/VBoxContainer"]
margin_right = 129.0
margin_bottom = 23.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "VIDEO"

[node name="Audio" type="Button" parent="Setting/VBoxContainer"]
margin_top = 27.0
margin_right = 129.0
margin_bottom = 50.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "AUDIO"

[node name="Back" type="Button" parent="Setting"]
anchor_left = 0.5
anchor_top = 0.497
anchor_right = 0.5
anchor_bottom = 0.497
margin_left = -30.0
margin_top = 272.8
margin_right = 32.0
margin_bottom = 301.8
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "BACK"

[node name="Video" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -46.5
margin_right = 73.5
margin_bottom = 46.5
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = 40.0

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_right = 92.0
margin_bottom = 80.0

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
margin_right = 92.0
margin_bottom = 23.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 31 )
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
margin_top = 28.0
margin_right = 92.0
margin_bottom = 51.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 31 )
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
margin_top = 56.0
margin_right = 92.0
margin_bottom = 79.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 31 )
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_left = 96.0
margin_right = 120.0
margin_bottom = 80.0

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0

[node name="BackVideo" type="Button" parent="Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = 271.0
margin_right = 28.0
margin_bottom = 300.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 33 )
custom_styles/hover = SubResource( 34 )
custom_styles/normal = SubResource( 35 )
text = "BACK"

[node name="Audio" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -32.5
margin_right = 87.5
margin_bottom = 32.5
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -28.0
margin_right = 87.5
margin_bottom = 28.0

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_right = 46.0
margin_bottom = 56.0

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_right = 46.0
margin_bottom = 15.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 37 )
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 20.0
margin_right = 46.0
margin_bottom = 35.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 37 )
text = "Music"

[node name="SoundFx" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 40.0
margin_right = 46.0
margin_bottom = 55.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 37 )
text = "SoundFx"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_left = 50.0
margin_right = 175.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_right = 125.0
margin_bottom = 16.0

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 20.0
margin_right = 125.0
margin_bottom = 36.0

[node name="SoundFx" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 40.0
margin_right = 125.0
margin_bottom = 56.0

[node name="BackAudio" type="Button" parent="Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 271.0
margin_right = 32.0
margin_bottom = 300.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 39 )
custom_styles/hover = SubResource( 40 )
custom_styles/normal = SubResource( 41 )
text = "BACK"

[connection signal="pressed" from="Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Setting/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="Setting/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Setting/Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_VSync_toggled"]
[connection signal="pressed" from="Video/BackVideo" to="." method="_on_BackVideo_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/SoundFx" to="." method="_on_SoundFx_value_changed"]
[connection signal="pressed" from="Audio/BackAudio" to="." method="_on_BackAudio_pressed"]
